# My_Chess_game

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  run.sh
Docker/: DockerBuild.sh  DockerRun.sh  Dockerfile
src/: CMakeLists.txt
src/Doc/: doc.puml
src/doc/: component.puml  doc.puml  interfaceContact.puml
src/src/: CMakeLists.txt
